--- a/Fundamentos Web/Primeiros exercicios em HTML5/css/style.css
+++ b/Fundamentos Web/Primeiros exercicios em HTML5/css/style.css
@@ -1,5 +1,11 @@
 body{
-    background-color: rgba(252, 173, 2, 0.288);
+    background-image: url(../Midia/bcd-5.jpg); /*colocando foto de background*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+    justify-content:center;
+    align-items: center;
+    height: 100vh;
 }
 
 /*Estilos da Página1.html*/
@@ -12,27 +18,27 @@ body{
 #menu li a{
     text-decoration: none; /*tirando hiperlink dos botões*/
     color: black;
-    font-family: sans-serif;
-    font-size: 15px;
+    font-family: sans-serif; /*tipo de fonte*/
+    font-size: 15px; /*tamanho da fonte*/
 }
 
 #menu li a:hover{ /*animação quando o mouse passa por cima de determinados lugares*/
-    color: gray;
+    color: rgb(255, 255, 255);
 }
 
 .center1{
     justify-content: center;
     text-align: center;
     font-family: sans-serif;
-    font-weight: bold;
+    font-weight: bold; /*fonte em negrito*/
     margin-bottom: 0%;
 
 }
 
 .center2{
     text-align: center;
-    font-family: sans-serif;
-    font-size: 15px;
+    font-family: sans-serif; /*tipo de fonte*/
+    font-size: 15px; /*tamanho da fonte*/
 
 }
 
@@ -44,15 +50,19 @@ body{
 }
 
 .space{
-    padding: 30px;
+    padding: 30px; /*espaçamento interno*/
 }
 
 .soyjo {
     width: 200px;
     height: 200px;
     margin-bottom: 20px;
-    border-radius: 12%;
-    box-shadow: 7px 6px 7px #ff0101c7, 7px 6px 7px #ff490100;
+    border-radius: 12%; /*curvinha na borda*/
+    box-shadow: 7px 6px 7px #000000d5, 7px 6px 7px #0631be00; /*degrade*/
+}
+
+.soyjo:hover{
+    box-shadow: 7px 6px 7px #ffffff, 7px 6px 7px #0631be00; /*troca de cor no degrade*/
 }
 
 .dirReserv{
@@ -60,9 +70,78 @@ body{
 }
 
 .imgRedes{
-    width: 50px;
-    height: 50px;
-    padding: 20px;
+    width: 50px;/*largura*/
+    height: 50px; /*altura*/
+    padding: 20px; /*espaçamento interno*/
+}
+
+.center2:hover{
+    color: rgb(255, 255, 255);
 }
 
 /*Estilos da Página2.html*/
+
+
+.formBox{
+    background-color: #0500006c; /*cor de fundo*/
+    text-align: center;
+    align-items: center;
+    height: 250px;/*altura*/
+    width: 200px; /*largura*/
+    padding: 45px; /*espaçamento interno*/
+    border-radius: 12%; /*curvinha na borda*/
+    font-family: sans-serif; /*tipo de fonte*/
+    font-size: 20px;  /*tamanho da fonte*/
+}
+
+.btnLogin{
+    position: relative; /* juntar isso com label sempre em absolute*/
+    margin-bottom: 15px;
+}
+
+input{
+    width: 100%; /*vai ocupar 100% do espaço da linha na caixa*/
+    height: 30px; /*altura do botão*/
+    background: transparent; /*tirando background do input*/
+    border: none; /*tirando bordas do input*/
+    outline: none; /*tirando a linha q fica embaixo quando clica*/
+    border-bottom: 2px solid #fc5000; /*colocando uma borda inferior e adicionando cor*/
+    transition: .20s ease-in-out; /*tempo pra gerar a ação*/
+}
+
+input:focus{ /*quando o botão for clicado gera a ação*/
+    border-bottom: 2px solid #17b617;
+    box-shadow: 0 2px 0 0 #17b617;
+}
+
+label{
+    position: absolute; /* se n colocado certo aparece no lado superior esquerdo da pagina*/
+    top: 0;
+    left: 0;
+    color: #020202;
+    font-weight: bold;
+    font-family: sans-serif;
+    transform: translateY(10px); /*descendo o texto, sempre verificar pra ficar certo na linha*/
+    transition: .20s ease-in-out;
+}
+
+input:focus + label{  /*quando o botão for clicado gera ação conjunta*/
+    transform: translateY(-11px) scale(.8); /*subindo o texto e diminuindo a escala dele*/
+    font-weight: bold;
+    color: #fff;
+}
+
+input:not(:placeholder-shown) + label{ /*metódo pra subir o texto quando algo or digitado*/
+    transform: translateY(-11px) scale(.8);
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0); /*sempre deixar invisivel*/
+}
+
+input:not(:placeholder-shown){
+    border-bottom: 2px solid #17b617;
+    box-shadow: 0 2px 0 0 #17b617;
+}
+
+input::placeholder{
+    color: transparent;
+}
