--- a/Fundamentos Web/Primeiros exercicios em HTML5/css/style.css
+++ b/Fundamentos Web/Primeiros exercicios em HTML5/css/style.css
@@ -10,7 +10,8 @@ body{
 
 /*Estilos da Página1.html*/
 #menu li{
-    display: inline;
+    display: flex;
+    text-align: center;
     align-items: center;
     padding: 15px; /*espaçamento interno*/
 }
@@ -18,6 +19,7 @@ body{
 #menu li a{
     text-decoration: none; /*tirando hiperlink dos botões*/
     color: black;
+    justify-content: center;
     font-family: sans-serif; /*tipo de fonte*/
     font-size: 15px; /*tamanho da fonte*/
 }
@@ -32,14 +34,12 @@ body{
     font-family: sans-serif;
     font-weight: bold; /*fonte em negrito*/
     margin-bottom: 0%;
-
 }
 
 .center2{
     text-align: center;
     font-family: sans-serif; /*tipo de fonte*/
     font-size: 15px; /*tamanho da fonte*/
-
 }
 
 .box1{
@@ -86,13 +86,20 @@ body{
     background-color: #0500006c; /*cor de fundo*/
     text-align: center;
     align-items: center;
-    height: 250px;/*altura*/
-    width: 200px; /*largura*/
+    height: 280px;/*altura*/
+    width: 285px; /*largura*/
     padding: 45px; /*espaçamento interno*/
     border-radius: 12%; /*curvinha na borda*/
     font-family: sans-serif; /*tipo de fonte*/
     font-size: 20px;  /*tamanho da fonte*/
+    box-shadow: 3px 2px 2px #000, 3px 2px 2px #0143ff00;
 }
+
+.formBox:hover{
+    box-shadow: 3px 3px 3px #000800b0, 3px 3px 3px #0143ff00;
+}
+
+
 
 .btnLogin{
     position: relative; /* juntar isso com label sempre em absolute*/
@@ -110,8 +117,8 @@ input{
 }
 
 input:focus{ /*quando o botão for clicado gera a ação*/
-    border-bottom: 2px solid #17b617;
-    box-shadow: 0 2px 0 0 #17b617;
+    border-bottom: 2px solid #27c034;
+    box-shadow: 0 2px 0 0 #27c034;
 }
 
 label{
@@ -121,20 +128,19 @@ label{
     color: #020202;
     font-weight: bold;
     font-family: sans-serif;
-    transform: translateY(10px); /*descendo o texto, sempre verificar pra ficar certo na linha*/
+    transform: translateY(11px); /*descendo o texto, sempre verificar pra ficar certo na linha*/
     transition: .20s ease-in-out;
 }
 
 input:focus + label{  /*quando o botão for clicado gera ação conjunta*/
-    transform: translateY(-11px) scale(.8); /*subindo o texto e diminuindo a escala dele*/
-    font-weight: bold;
+    transform: translateY(-15px) scale(.8); /*subindo o texto e diminuindo a escala dele*/
     color: #fff;
+    font-weight: bold;
 }
 
 input:not(:placeholder-shown) + label{ /*metódo pra subir o texto quando algo or digitado*/
-    transform: translateY(-11px) scale(.8);
-    font-weight: bold;
-    color: rgba(255, 255, 255, 0); /*sempre deixar invisivel*/
+    transform: translateY(-15px) scale(.8);
+    color: #fff; /*sempre deixar invisivel*/
 }
 
 input:not(:placeholder-shown){
@@ -144,4 +150,27 @@ input:not(:placeholder-shown){
 
 input::placeholder{
     color: transparent;
+}
+
+button{
+    padding: 12px 18px;
+    margin: 10px;
+    border: none;
+    border-radius: 12%;
+    text-align: center;
+    background-color: #fefeff1c;
+    align-items: center;
+    box-shadow: 3px 2px 2px #fc5000, 3px 2px 2px #0143ff00;
+}
+
+button:focus{
+    background-color: #00fc1594;
+    transition: .45s;
+}
+
+button:hover{ /*animação do botao*/
+    box-shadow: 3px 2px 2px #000, 3px 2px 2px #0143ff00;
+    background-color: #27c034;
+    transition: .75s;
+    
 }
