Atualização de rotas

--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
@@ -8,21 +8,21 @@
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua">
+                <input class= "form-control" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua" required>
                 <label for="link">Link da Foto</label>
             </div>
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="biografia" id="biografia" placeholder="Digite uma biografia">
+                <input class= "form-control" type="text" name="biografia" id="biografia" placeholder="Digite uma biografia" required>
                 <label for="biografia">Biografia</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha">
+                <input class= "form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
                 <label for="senha">Senha</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha">
+                <input class= "form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha" required>
                 <label for="confirmSenha">Confirme sua Senha</label>
             </div>
 
@@ -37,7 +37,7 @@
 
 
             <div class= "d-flex justify-content-center">
-                <button class="btnCancel">Cancelar</button>
+                <button class="btnCancel" routerLink= "/entrar">Cancelar</button>
                 <button class="btnCad">Cadastrar</button>
             </div>
 
