--- a/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
@@ -17,7 +17,7 @@
 
             <p class= "text-white text-center mt-3">
                 Não tem uma conta?<br>
-                <a class="cad" href="">Cadastre-se</a>
+                <a class="cad" routerLink= "/cadastrar">Cadastre-se</a>
             </p>
 
         </div>
