--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.css
@@ -31,7 +31,7 @@ input{
     border: none;
     outline: none;
     border-bottom: 2px solid #ffffff;
-    color: #ffffff46;
+    color: #ffffff;
     font-family: Arial, Helvetica, sans-serif; /*sempre por mais de uma*/
     font-size: 20px;
     transition: .20s ease-in-out;
@@ -120,6 +120,8 @@ button{
 button:focus{
     background-color: #00fc1594;
     transition: .35s;
+    border: none;
+    outline: none;
 }
 
 .btnCancel:hover{
