--- a/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.css
@@ -91,16 +91,23 @@ button{
 button:focus{
     background-color: #00fc1594;
     transition: .35s;
+    border: none;
+    outline: none;
 }
 
 button:hover{
     font-family: Arial, Helvetica, sans-serif;
     box-shadow: 6px 5px 5px #0258f8e5, 5px 5px 5px #0143ff00;
     background-color: #00fc1594;
-    transition: .55s;
+    transition: .55s ease-in-out;
 }
 
 .cad{
     text-decoration: none;
     color: #fff;
+}
+
+.cad:hover{
+    color: #000;
+    transition: .55s ease-in-out;
 }
