Atualização no Input

--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
@@ -3,26 +3,26 @@
         <div class="col-md-6 box">
             <h1 class="text-white mb-3 text-center">Cadastro</h1>
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="nome" id="nome" placeholder="Digite seu Nome">
+                <input class= "form-control slct" type="text" name="nome" id="nome" placeholder="Digite seu Nome">
                 <label for="nome">Nome</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua" required>
+                <input class= "form-control slct" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua" required>
                 <label for="link">Link da Foto</label>
             </div>
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="biografia" id="biografia" placeholder="Digite uma biografia" required>
+                <input class= "form-control slct" type="text" name="biografia" id="biografia" placeholder="Digite uma biografia" required>
                 <label for="biografia">Biografia</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+                <input class= "form-control slct" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
                 <label for="senha">Senha</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha" required>
+                <input class= "form-control slct " type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha" required>
                 <label for="confirmSenha">Confirme sua Senha</label>
             </div>
 
