--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.css
@@ -49,31 +49,17 @@ label{
     font-family : Arial , Helvetica , sans-serif; 
     color: #ffffff;
     transform: translateY(10px);
-    transition: .20s ease-in-out;
+    transition: .20s ease-in-out; 
+    margin-top: -5px; /*Lembrar de espaçar na validação*/
 }
 
-.lblSelect{
+input:focus + label{
     color: transparent;
-}
-
-
-.lblSelect:focus + .slct{
-    color: transparent;
-}
-
-#tUser{
-    color: #fff;
     background-color: transparent;
-    border:none;
-    outline: none;
-    margin-top: 5px; /*não mexer! alinhado com a label*/
-    margin-left: 125px; /*não mexer! alinhado com a label*/
-}
-.opt{
-    color: #000;
 }
 
 .slct{
+    color:white;
     background: transparent;
     border: none;
     outline: none;
@@ -106,8 +92,8 @@ input::placeholder{
 
 button{
     padding: 12px 18px;
-    margin-top: 15px; 
-    margin-right: 15px;
+    margin-top: 55px; 
+    margin-right: 25px;
     font-family: Arial, Helvetica, sans-serif; /*sempre por mais de uma*/
     border: none;
     border-radius: 11px;
@@ -122,6 +108,18 @@ button:focus{
     transition: .35s;
     border: none;
     outline: none;
+}
+
+#tUser{
+    color: #fff;
+    background-color: transparent;
+    border:none;
+    outline: none;
+    margin-top: 0; /*não mexer! alinhado com a label*/
+    margin-left: 125px; /*não mexer! alinhado com a label*/
+}
+.opt{
+    color: #000;
 }
 
 .btnCancel:hover{
