--- a/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.css
@@ -24,10 +24,14 @@
     transition: .55s ease-in-out;
 }
 
-.btnLogin{
-    position: relative;
-    margin-bottom: 20px;
+.slct{
+    color:white;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #ffffff;
 }
+
 
 input{
     width: 100%;
@@ -42,14 +46,20 @@ input{
     transition: .20s ease-in-out;
 }
 
+.btnLogin{
+    position: relative;
+    margin-bottom: 20px;
+}
+
 label{
     position: absolute;
-    top : -10% ; 
+    top : -10%; 
     left: 2%;
     font-family : Arial , Helvetica , sans-serif; 
     color: #ffffff;
     transform: translateY(10px);
     transition: .20s ease-in-out;
+    margin: -6px;
 }
 
 input:focus{
@@ -59,12 +69,12 @@ input:focus{
 
 input:focus + label{
     transform: translateY(-11px) scale(.9);
-    color: rgb(255, 255, 255);
+    color: #fff;
 }
 
 input:not(:placeholder-shown) + label{
     transform: translateY(-11px) scale(.9);
-    color: rgb(255, 255, 255);
+    color: #fff;
 }
 
 input:not(:placeholder-shown){
