--- a/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
@@ -3,16 +3,16 @@
         <div class="col-md-6 box">
             <h1 class="text-white mb-3 text-center">Entrar</h1>
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
+                <input class= "form-control slct" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
                 <label for="usuario">Usuário</label>
             </div>
             <div class="form-group btnLogin">
-                <input class= "form-control" type="text" name="senha" id="senha" placeholder="Digite sua senha">
+                <input class= "form-control slct" type="text" name="senha" id="senha" placeholder="Digite sua senha">
                 <label for="senha">Digite sua senha</label>
             </div>
 
             <div class= "d-flex justify-content-center">
-                <button>Entrar</button>
+                <button type= "submit">Entrar</button>
             </div>
 
             <p class= "text-white text-center mt-3">
