--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
@@ -3,32 +3,39 @@
         <div class="col-md-6 box">
             <h1 class="text-white mb-3 text-center">Cadastro</h1>
             <div class="form-group btnLogin">
-                <input class= "form-control slct" type="text" name="nome" id="nome" placeholder="Digite seu Nome">
+                <input [(ngModel)]= 'user.nome' class= "form-control slct" type="text" name="nome" id="nome" placeholder="Digite seu Nome">
                 <label for="nome">Nome</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control slct" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua" required>
-                <label for="link">Link da Foto</label>
-            </div>
-            <div class="form-group btnLogin">
-                <input class= "form-control slct" type="text" name="biografia" id="biografia" placeholder="Digite uma biografia" required>
-                <label for="biografia">Biografia</label>
+                <input [(ngModel)]= 'user.usuario' class= "form-control slct" type="text" name="usuario" id="usuario" placeholder="Digite o link de uma foto sua" required>
+                <label for="usuario">Usuário</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control slct" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+                <input [(ngModel)]= 'user.foto' class= "form-control slct" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua" required>
+                <label for="link">Link da Foto</label>
+            </div>
+            
+            <!--<div class="form-group btnLogin">
+                <input class= "form-control slct" type="text" name="biografia" id="biografia" placeholder="Digite uma biografia" required>
+                <label for="biografia">Biografia</label>
+            </div>
+            -->
+
+            <div class="form-group btnLogin">
+                <input (input)='confirmSenha($event)' class= "form-control slct" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
                 <label for="senha">Senha</label>
             </div>
 
             <div class="form-group btnLogin">
-                <input class= "form-control slct " type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha" required>
+                <input [(ngModel)]= 'user.senha'  class= "form-control slct " type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha" required>
                 <label for="confirmSenha">Confirme sua Senha</label>
             </div>
 
             <div class="form-group btnLogin">
-                <label for="tipoUsuario">Tipo de Usuário:</label> 
-                <select id="tUser">
+                <label for="tipoUsuario" class="mt-1">Tipo de Usuário:</label> 
+                <select class="form-control tUser" name="tipo" id="tipo" (change)='tipoUser($event)'>
                     <option selected disabled value="">Selecione </option>
                     <option class="opt" value="normal">Administrador</option>
                     <option class="opt" value="admin">Usuário</option>
@@ -38,7 +45,7 @@
 
             <div class= "d-flex justify-content-center">
                 <button class="btnCancel" routerLink= "/entrar">Cancelar</button>
-                <button class="btnCad">Cadastrar</button>
+                <button class="btnCad" (click)= 'cadastrar()'>Cadastrar</button>
             </div>
 
         </div>
