Atualização componente de inicio

--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
@@ -9,7 +9,7 @@
 
             <div class="form-group btnLogin">
                 <input [(ngModel)]= 'user.usuario' class= "form-control slct" type="text" name="usuario" id="usuario" placeholder="Digite o link de uma foto sua" required>
-                <label for="usuario">Usuário</label>
+                <label for="usuario">Email</label>
             </div>
 
             <div class="form-group btnLogin">
