--- a/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
@@ -4,7 +4,7 @@
             <h1 class="text-white mb-3 text-center">Entrar</h1>
             <div class="form-group btnLogin">
                 <input [(ngModel)]='userLogin.usuario' class= "form-control slct" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
-                <label for="usuario">Usuário</label>
+                <label for="usuario">Email</label>
             </div>
             <div class="form-group btnLogin">
                 <input [(ngModel)]='userLogin.senha' class= "form-control slct" type="text" name="senha" id="senha" placeholder="Digite sua senha">
