--- a/Blog Pessoal/blogpessoal/src/app/menu/menu.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/menu/menu.component.css
@@ -1,5 +1,5 @@
 nav{
-    background-image: linear-gradient(#1f1fddc0, #6ba2da); /*inverter no rodape*/
+    background-image: linear-gradient(#1f1fddc0, #0481ff); /*inverter no rodape*/
 }
 
 .fs-16{
