--- a/Blog Pessoal/blogpessoal/src/app/rodape/rodape.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/rodape/rodape.component.css
@@ -1,5 +1,5 @@
 footer{
-    background-image: linear-gradient(#63c4e2, #4444ca);/*inverter no menu*/
+    background-image: linear-gradient(#0481ff, #1f1fddc0);/*inverter no menu*/
 }
 
 ul.redes{
