--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -1,1 +1,111 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+
+    <div class="row d-flex align-items-center box">
+        <!--Deixa a foto e texto alinhados-->
+
+        <div class="col-md-6 mt-5">
+            <!--COLUNA DA ESQUERDA-->
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-6 text-white">
+                    <h1>Seja bem-vinde! </h1>
+                    <h5>Expresse aqui seus pensamentos e opiniões sobre a pagina</h5>
+                </div>
+            </div>
+
+            <div class="row d-flex justify-content-center mt-3 mb-5">
+                <div class="col-md-6">
+                    <button class="btnPostagem mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                    <a class="btn btnPostagem" href="#postagens">Ver Postagens</a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-md-6 d-flex justify-content-center">
+            <!--COLUNA DA DIREITA-->
+            <img src="https://raw.githubusercontent.com/LucasLM1/Formulario-HTML-e-CSS/3d5dae29144c750b0ecc4cd46cd7c0d84f74c091/FormLacos_da_Comunidade/CadEvento/fotoVetorizada.svg"
+                alt="imagem vetorizada" width="500px" height="500px">
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container mb-5 mt-5" id="postagens">
+    <nav>
+        <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
+            <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab"
+                data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
+                aria-selected="true">Todas as Postagens</a>
+
+            <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
+                href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
+                Postagens</a>
+
+            <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab"
+                href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por
+                Tema</a>
+        </div>
+
+    </nav>
+
+    <div class="tab-content" id="nav-tabContent">
+
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
+            aria-labelledby="nav-todasPostagens-tab">
+            Todas as Postagens
+        </div>
+
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labellezdby="nav-minhasPostagens-tab">
+            Minhas Postagens
+        </div>
+
+        <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+            Postagens por Tema
+        </div>
+
+    </div>
+
+</div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog"
+    aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <div class="form-group">
+                    <label for="titulo">Título</label>
+                    <input class="form-control" type="text" id="titulo" placeholder="Digite o titulo">
+                </div>
+
+                <div class="form-group">
+                    <label for="texto">Texto</label>
+                    <textarea class= "form-control" name="texto" id="texto"  rows="3"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="texto">Escolha um tema ou <a href="">cadastre um novo</a></label>
+                    <select class= "form-control" name="tema" id="tema">
+                        <option value="">Temas</option>
+                    </select>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary">Publicar</button>
+            </div>
+        </div>
+    </div>
+</div>
