--- a/Blog Pessoal/blogpessoal/src/app/menu/menu.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/menu/menu.component.html
@@ -7,12 +7,12 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center"> <!--mr alinha do lado direito-->
             <li class="nav-item active">
-                <img src="https://avatars.githubusercontent.com/u/86297161?v=4" alt="Imagem da(o) usuaria(o)"
+                <img src="{{foto}}" alt="Imagem da(o) usuaria(o)"
                     width="50px" height="50px" class="img-fluid rounded-circle">
                 <!--deixa as imagens responsivas a todos tipos de tela-->
             </li>
             <li class="nav-item pl-2 fs-16">
-                <p class="m-0 font-weight-bold text-white">Nome do(a) usuario(a)</p>
+                <p class="m-0 font-weight-bold text-white">{{nome}}</p>
             </li>
 
             <li class="nav-item pl-2">
@@ -25,7 +25,7 @@
 
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-2 fs-16">
-                <a class="m-0 font-weight-bold text-white">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                <a (click)='sair()' class="m-0 font-weight-bold text-white">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
