--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="texto">Escolha um tema ou <a href="">cadastre um novo</a></label>
+                    <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
                     <select class= "form-control" name="tema" id="tema">
                         <option value="">Temas</option>
                     </select>
@@ -104,7 +104,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary">Publicar</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Publicar</button>
             </div>
         </div>
     </div>
