Atualização de Estilo

--- a/Blog Pessoal/blogpessoal/src/app/app.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!--<app-inicio></app-inicio>-->
+<!--<app-tema></app-tema>-->
+
 <app-menu *ngIf='auth.logado()'></app-menu>
 
 <router-outlet></router-outlet>
