--- a/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/cadastrar/cadastrar.component.html
@@ -4,17 +4,20 @@
             <h1 class="text-white mb-3 text-center">Cadastro</h1>
             <div class="form-group btnLogin">
                 <input [(ngModel)]= 'user.nome' class= "form-control slct" type="text" name="nome" id="nome" placeholder="Digite seu Nome">
-                <label for="nome">Nome</label>
+                <label for="nome">Nome <i class="fa fa-user-o" aria-hidden="true"></i>
+                </label>
             </div>
 
             <div class="form-group btnLogin">
                 <input [(ngModel)]= 'user.usuario' class= "form-control slct" type="text" name="usuario" id="usuario" placeholder="Digite o link de uma foto sua" required>
-                <label for="usuario">Email</label>
+                <label for="usuario">Email <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </label>
             </div>
 
             <div class="form-group btnLogin">
                 <input [(ngModel)]= 'user.foto' class= "form-control slct" type="text" name="link" id="link" placeholder="Digite o link de uma foto sua" required>
-                <label for="link">Link da Foto</label>
+                <label for="link">Link da Foto <i class="fa fa-camera" aria-hidden="true"></i>
+                </label>
             </div>
             
             <!--<div class="form-group btnLogin">
@@ -25,12 +28,14 @@
 
             <div class="form-group btnLogin">
                 <input (input)='confirmSenha($event)' class= "form-control slct" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
-                <label for="senha">Senha</label>
+                <label for="senha">Senha <i class="fa fa-lock" aria-hidden="true"></i>
+                </label>
             </div>
 
             <div class="form-group btnLogin">
                 <input [(ngModel)]= 'user.senha'  class= "form-control slct " type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha" required>
-                <label for="confirmSenha">Confirme sua Senha</label>
+                <label for="confirmSenha">Confirme sua Senha <i class="fa fa-lock" aria-hidden="true"></i>
+                </label>
             </div>
 
             <div class="form-group btnLogin">
