--- a/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/entrar/entrar.component.html
@@ -4,11 +4,13 @@
             <h1 class="text-white mb-3 text-center">Entrar</h1>
             <div class="form-group btnLogin">
                 <input [(ngModel)]='userLogin.usuario' class= "form-control slct" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
-                <label for="usuario">Email</label>
+                <label for="usuario">Email <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </label>
             </div>
             <div class="form-group btnLogin">
                 <input [(ngModel)]='userLogin.senha' class= "form-control slct" type="text" name="senha" id="senha" placeholder="Digite sua senha">
-                <label for="senha">Digite sua senha</label>
+                <label for="senha">Digite sua senha <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+                </label>
             </div>
 
             <div class= "d-flex justify-content-center">
@@ -17,7 +19,8 @@
 
             <p class= "text-white text-center mt-3">
                 Não tem uma conta?<br>
-                <a class="cad" routerLink= "/cadastrar">Cadastre-se</a>
+                <a class="cad" routerLink= "/cadastrar">Cadastre-se <i class="fa fa-check" aria-hidden="true"></i>
+                </a>
             </p>
 
         </div>
