--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.css
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.css
@@ -22,6 +22,16 @@ h5{
     font-size: 18pt;
 }
 
+textarea{
+    min-width: 465px;
+    width: 465px;
+    max-width: 465px;
+
+    min-height: 125px;
+    height: 125px;
+    max-height: 125px;
+}
+
 .btnPostagem{
     border-radius: 10px;
     height: 40px;
@@ -38,4 +48,54 @@ h5{
     border-left: 1px solid rgb(252, 217, 0);
     
 
+}
+
+.mBody{
+    background-image: linear-gradient(180deg, rgb(253, 101, 0), rgb(2, 162, 255));
+}
+
+.nvPost{
+    background-color: rgb(253, 80, 0);
+}
+
+.nvPost1{
+    background-color: rgb(2, 162, 255);
+}
+
+.newCad:hover{
+    color: #000;
+    text-decoration: underline;
+}
+
+.tUser{
+    width: 175px;
+    color: #fff;
+    background-color: transparent;
+    border:none;
+    outline: none;
+    margin-top: -37px; /*não mexer! alinhado com a label*/
+    margin-left: 290px; /*não mexer! alinhado com a label*/
+}
+
+.opt{
+    background-color: rgba(82, 114, 202, 0.945);
+    color: #000;
+}
+
+.btnCancel, .btnSend{
+    width: 220px;
+    background-color: rgb(112, 112, 112);
+    border: none;
+}
+
+.btnCancel:hover{
+    background-image: linear-gradient(40deg, rgb(255, 38, 0), rgb(253, 0, 0));
+    color:#fff;
+    transition: .85s ease-in-out;
+}
+
+.btnSend:hover{
+    background-image: linear-gradient(40deg, rgb(43, 255, 0), rgb(0, 253, 0));
+    color:#fff;
+    transition: .85s ease-in-out;
 }
