--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -70,23 +70,22 @@
 
 
 
-
 <!-- Modal -->
 <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog"
     aria-labelledby="TituloModalCentralizado" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
+        <div class="modal-content text-white">
+            <div class="modal-header nvPost">
                 <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body mBody">
 
                 <div class="form-group">
                     <label for="titulo">Título</label>
-                    <input class="form-control" type="text" id="titulo" placeholder="Digite o titulo">
+                    <input class="form-control slct" type="text" id="titulo" placeholder="Digite o titulo">
                 </div>
 
                 <div class="form-group">
@@ -94,17 +93,18 @@
                     <textarea class= "form-control" name="texto" id="texto"  rows="3"></textarea>
                 </div>
 
-                <div class="form-group">
-                    <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
-                    <select class= "form-control" name="tema" id="tema">
-                        <option value="">Temas</option>
+                <div class="form-group mt-1">
+                    <label for="texto">Escolha um tema ou <a class=" text-white newCad" data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
+                    <select class= "form-control tUser" name="tema" id="tema">
+                        <option class="opt" selected disabled value="">Selecione </option>
+                        <option class="opt" value="">Temas</option>
                     </select>
                 </div>
 
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Publicar</button>
+            <div class="modal-footer d-flex justify-content-center nvPost1">
+                <button type="button" class="btn text-white btnCancel" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn text-white btnSend" data-dismiss="modal">Publicar</button>
             </div>
         </div>
     </div>
