--- a/Blog Pessoal/blogpessoal/src/app/tema/tema.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/tema/tema.component.html
@@ -7,17 +7,18 @@
             <h5 class="text-center">Veja aqui todos os temas cadastrados ou cadastre um novo:</h5>
 
             <a class="text-white text-left" routerLink="/inicio">
-                <i class="fa fa-angle-double-left" aria-hidden="true"></i> início
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>  início
             </a>
 
-            <div class="row d-flex justify-content-center mt-5 mb-5">
+            <div class="row d-flex justify-content-center mt-2 mb-5">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+                        <input type="text" class="form-control inputDescricao" id="descricao" placeholder="Digite a descrição do tema">
                     </div>
 
                     <div class= "d-flex justify-content-center">
-                        <button class="btn btn-light">Cadastrar</button>
+                        <button class="btn btnCad">Cadastrar <i class="fa fa-check" aria-hidden="true"></i></button>
+                        
                     </div>
                 </div>
             </div>
