--- a/Blog Pessoal/blogpessoal/src/app/tema/tema.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/tema/tema.component.html
@@ -1,24 +1,26 @@
 <div class="container-fluid">
 
-    <div class="row bg-secondary mt-5 mb-5 box">
-        <div class="col-md-12 text-white mt-5">
+    <div class="row bg-secondary box">
+        <div class="col-md-12 text-white">
+
+            <a class="text-white text-left" routerLink="/inicio">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i> início
+            </a>
 
             <h1 class="text-center">Temas</h1>
             <h5 class="text-center">Veja aqui todos os temas cadastrados ou cadastre um novo:</h5>
 
-            <a class="text-white text-left" routerLink="/inicio">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>  início
-            </a>
-
-            <div class="row d-flex justify-content-center mt-2 mb-5">
+            <div class="row d-flex justify-content-center mt-4 mb-5">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input [(ngModel)]='tema.descricao' type="text" class="form-control inputDescricao" id="descricao" placeholder="Digite a descrição do tema">
+                        <input [(ngModel)]='tema.descricao' type="text" class="form-control inputDescricao"
+                            id="descricao" placeholder="Digite a descrição do tema">
                     </div>
 
-                    <div class= "d-flex justify-content-center">
-                        <button class="btn btnCad" (click)='cadastrar()'>Cadastrar <i class="fa fa-check" aria-hidden="true"></i></button>
-                        
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btnCad" (click)='cadastrar()'>Cadastrar <i class="fa fa-check"
+                                aria-hidden="true"></i></button>
+
                     </div>
                 </div>
             </div>
@@ -39,23 +41,23 @@
         <div class="col-md-6">
             <table class="table table-hover">
                 <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Descrição</th>
-                    <th scope="col" class= "text-right">Modificações</th>
-                  </tr>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col" class="text-right">Modificações</th>
+                    </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor='let item of listaTemas'>
-                    <th>{{item.id}}</th>
-                    <td>{{item.descricao}}</td>
-                    <td class="d-flex justify-content-end">
-                      <button class="btn btn-info mr-3">Editar</button>
-                      <button class="btn btn-danger">Apagar</button>
-                    </td>
-                  </tr>
+                    <tr *ngFor='let item of listaTemas'>
+                        <th>{{item.id}}</th>
+                        <td>{{item.descricao}}</td>
+                        <td class="d-flex justify-content-end">
+                            <button class="btn btn-info mr-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
+                            <button class="btn btn-danger" [routerLink]="['/tema-delete', item.id]">Apagar</button>
+                        </td>
+                    </tr>
                 </tbody>
-              </table>
+            </table>
         </div>
     </div>
 
