--- a/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
+++ b/Blog Pessoal/blogpessoal/src/app/inicio/inicio.component.html
@@ -5,8 +5,8 @@
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 text-white ">
-                    <h1 class="fs-54">Seja bem vindo(a)!</h1>
-                    <h5 class="fs-18">expresse aqui os seus pensamentos e opniões!</h5>
+                    <h1 class="fs-54">Seja bem vinde!</h1>
+                    <h5 class="fs-18">Expresse aqui suas opiniões e sentimentos sobre o Blog!</h5>
                 </div>
             </div>
 
